# Hackathon_0_AI_Employee

./: .gitignore  CLAUDE.md  README.md  requirements.txt  run.py  test_all_features.py
AI_Employee_Vault/: .processed_emails.txt  ARCHITECTURE.md  Company_Handbook.md  DOCUMENTATION.md  Dashboard.md  Dockerfile  FIX_OBSIDIAN_PERMISSIONS.bat  HACKATHON_SUBMISSION.md  START_HERE.md  docker-entrypoint.sh  scheduler.py  start_ai_employee.py
AI_Employee_Vault/.claude/: settings.json
AI_Employee_Vault/.obsidian/: app.json  appearance.json  workspace.json
AI_Employee_Vault/Approved/: email-reply-20260121_231621.md  email-reply-20260121_231828.md  email-reply-20260121_231829.md  email-reply-20260121_232259.md  email-reply-20260121_234030.md  email_draft_1769704878607.md  email_draft_1769705043872.md  email_draft_1769705909847.md  test_email_001.md
AI_Employee_Vault/watchers/: .env.example  README.md  approval_executor.py  approval_workflow.py  audit_logger.py  base_watcher.py  ceo_briefing.py  email_sender.py  error_recovery.py  facebook_poster.py  gmail_watcher.py  gmail_watcher_simple.py  instagram_poster.py  linkedin_poster.py  linkedin_watcher.py  odoo_integration.py  orchestrator.py  pyproject.toml  ralph_wiggum_loop.py  scheduled_tasks.py  test_social_post.py  twitter_x_poster.py  whatsapp_watcher.py
config/: mcp_config.json
nerve_center/: Business_Goals.md  Company_Handbook.md  Dashboard.md  schedule.json
scripts/: setup.sh  setup_google.py  test_demo.py  test_gmail.py  view_dashboard.py
src/: orchestrator.py
src/modules/: crm.py  (+4 more)
tests/: test_workflow.py
(+627 files in other folders)
